--- a/MapExplorer-macOS/Sources/Controllers/PlayerViewController/Player.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/PlayerViewController/Player.storyboard
@@ -46,6 +46,19 @@
                                         <rect key="frame" x="21" y="17" width="29" height="26"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                     </customView>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o5X-ga-527">
+                                        <rect key="frame" x="11" y="115" width="100" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="4Q7-Yo-yPa">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D6D-UK-KZE">
+                                        <rect key="frame" x="92" y="196" width="439" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    </customView>
                                 </subviews>
                             </customView>
                         </subviews>
@@ -54,7 +67,9 @@
                         <outlet property="closeButton" destination="LMj-2E-agr" id="Xwt-Ce-p9M"/>
                         <outlet property="closeButtonView" destination="tki-Wu-2RP" id="9uo-f5-gDj"/>
                         <outlet property="detailView" destination="Cd2-K7-1Jw" id="fSS-GH-d5H"/>
+                        <outlet property="durationDisplay" destination="o5X-ga-527" id="OIA-B6-FYo"/>
                         <outlet property="playerView" destination="gA4-i9-AmE" id="K4v-h3-mLX"/>
+                        <outlet property="sliderView" destination="D6D-UK-KZE" id="Bgq-O0-9g7"/>
                         <outlet property="titleLabel" destination="2XJ-Bn-D2F" id="4gK-g8-hej"/>
                     </connections>
                 </viewController>
