--- a/MapExplorer-macOS/Sources/Controllers/PlayerViewController/Player.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/PlayerViewController/Player.storyboard
@@ -3,7 +3,9 @@
     <dependencies>
         <plugIn identifier="com.apple.AVKitIBPlugin" version="13771"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <capability name="system font weights other than Regular or Bold" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--Player View Controller-->
@@ -14,58 +16,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="640" height="553"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cd2-K7-1Jw">
-                                <rect key="frame" x="0.0" y="0.0" width="640" height="553"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <subviews>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2XJ-Bn-D2F">
-                                        <rect key="frame" x="18" y="155" width="604" height="28"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="ceK-k5-rdu">
-                                            <font key="font" metaFont="systemBold" size="23"/>
-                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                    </textField>
-                                    <avPlayerView fixedFrame="YES" controlsStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="gA4-i9-AmE">
-                                        <rect key="frame" x="0.0" y="191" width="640" height="362"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                    </avPlayerView>
-                                    <button horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LMj-2E-agr">
-                                        <rect key="frame" x="16" y="15" width="29" height="26"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <buttonCell key="cell" type="disclosure" bezelStyle="roundedDisclosure" imagePosition="only" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="2mS-GI-yVm">
-                                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="closeButtonTapped:" target="Wqm-cw-q7Q" id="WPC-fw-bc0"/>
-                                        </connections>
-                                    </button>
-                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tki-Wu-2RP">
-                                        <rect key="frame" x="16" y="16" width="29" height="26"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                    </customView>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o5X-ga-527">
-                                        <rect key="frame" x="537" y="152" width="100" height="31"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="4Q7-Yo-yPa">
-                                            <font key="font" size="20" name="TimesNewRomanPSMT"/>
-                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                    </textField>
-                                </subviews>
+                            <avPlayerView controlsStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="5d3-81-scN">
+                                <rect key="frame" x="0.0" y="193" width="640" height="360"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5d3-81-scN" secondAttribute="height" multiplier="16:9" id="wbo-WU-Gg4"/>
+                                </constraints>
+                            </avPlayerView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="79Q-ga-wiD" customClass="PlayerControl" customModule="MapExplorer_macOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="143" width="640" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="wgR-aC-TGC"/>
+                                </constraints>
+                            </customView>
+                            <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7d0-0O-KfF" userLabel="Close Button">
+                                <rect key="frame" x="16" y="17" width="29" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="21" id="3RP-wB-BC1"/>
+                                    <constraint firstAttribute="height" constant="21" id="lXb-NV-2qu"/>
+                                </constraints>
+                                <buttonCell key="cell" type="disclosure" bezelStyle="roundedDisclosure" imagePosition="only" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="N0S-Se-Ged">
+                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="closeButtonTapped:" target="Wqm-cw-q7Q" id="bWw-L3-lqb"/>
+                                </connections>
+                            </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SgX-NR-AzP">
+                                <rect key="frame" x="16" y="108" width="608" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="27" id="hbs-qH-mqn"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="c0f-GG-f1v">
+                                    <font key="font" metaFont="systemSemibold" size="22"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="1z5-vF-SAD">
+                                <rect key="frame" x="16" y="16" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Smi-Mf-tGh"/>
+                                    <constraint firstAttribute="height" constant="30" id="T8X-hQ-OGU"/>
+                                </constraints>
                             </customView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="7d0-0O-KfF" firstAttribute="leading" secondItem="4tJ-aE-z8E" secondAttribute="leading" constant="20" id="00Y-6T-yX7"/>
+                            <constraint firstItem="1z5-vF-SAD" firstAttribute="centerX" secondItem="7d0-0O-KfF" secondAttribute="centerX" id="172-B8-TvU"/>
+                            <constraint firstAttribute="trailing" secondItem="79Q-ga-wiD" secondAttribute="trailing" id="84K-Qk-NWK"/>
+                            <constraint firstItem="5d3-81-scN" firstAttribute="top" secondItem="4tJ-aE-z8E" secondAttribute="top" id="9c9-cs-UfW"/>
+                            <constraint firstAttribute="trailing" secondItem="5d3-81-scN" secondAttribute="trailing" id="AP3-48-ljc"/>
+                            <constraint firstItem="79Q-ga-wiD" firstAttribute="leading" secondItem="4tJ-aE-z8E" secondAttribute="leading" id="Alv-6T-Bgy"/>
+                            <constraint firstItem="1z5-vF-SAD" firstAttribute="centerY" secondItem="7d0-0O-KfF" secondAttribute="centerY" id="Ap5-Dw-oaL"/>
+                            <constraint firstItem="5d3-81-scN" firstAttribute="leading" secondItem="4tJ-aE-z8E" secondAttribute="leading" id="Dcp-Tl-Apv"/>
+                            <constraint firstItem="79Q-ga-wiD" firstAttribute="top" secondItem="5d3-81-scN" secondAttribute="bottom" id="ELc-QL-ywJ"/>
+                            <constraint firstItem="SgX-NR-AzP" firstAttribute="leading" secondItem="4tJ-aE-z8E" secondAttribute="leading" constant="18" id="GBu-7m-522"/>
+                            <constraint firstItem="SgX-NR-AzP" firstAttribute="top" secondItem="79Q-ga-wiD" secondAttribute="bottom" constant="8" id="Ho5-zl-ySX"/>
+                            <constraint firstAttribute="trailing" secondItem="SgX-NR-AzP" secondAttribute="trailing" constant="18" id="SpU-mq-Uwe"/>
+                            <constraint firstAttribute="bottom" secondItem="7d0-0O-KfF" secondAttribute="bottom" constant="20" id="nKJ-JK-kdT"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="closeButton" destination="LMj-2E-agr" id="Xwt-Ce-p9M"/>
-                        <outlet property="closeButtonView" destination="tki-Wu-2RP" id="9uo-f5-gDj"/>
-                        <outlet property="detailView" destination="Cd2-K7-1Jw" id="fSS-GH-d5H"/>
-                        <outlet property="durationDisplay" destination="o5X-ga-527" id="OIA-B6-FYo"/>
-                        <outlet property="playerView" destination="gA4-i9-AmE" id="K4v-h3-mLX"/>
-                        <outlet property="titleLabel" destination="2XJ-Bn-D2F" id="4gK-g8-hej"/>
+                        <outlet property="dismissButton" destination="1z5-vF-SAD" id="53U-dg-tfE"/>
+                        <outlet property="playerControl" destination="79Q-ga-wiD" id="m3V-fc-l6M"/>
+                        <outlet property="playerView" destination="5d3-81-scN" id="lxG-hx-IKL"/>
+                        <outlet property="videoTitle" destination="SgX-NR-AzP" id="8y1-pw-o2Q"/>
                     </connections>
                 </viewController>
                 <customObject id="p1J-Xb-jWL" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
